--- a/html.html
+++ b/html.html
@@ -9,7 +9,7 @@
 <body>
     <div class="menus">
        <div class="menu">
-           <h1>Tienda</h1>       
+           <h1>Tiendaa</h1>       
         </div>
         <div class="menu">
             <h2>Zapatillas</h2>
