proyecto fase 1 acabada

--- a/paginas menus/Sudaderas.Html
+++ b/paginas menus/Sudaderas.Html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda</title>
-    <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="/css.css">
 </head>
 <body>
     <div class="menus">
-       <div class="menu">
-           <h1>Tienda</h1>       
-        </div>
+        <div class="menu">
+            <a class="URL" href="/html.html"><h1>Tienda</h1></a>
+         </div>
         <div class="menu">
             <a class="URL" href="/paginas menus/Zapatillas.html"><h2>Zapatillas</h2></a>
         </div>
@@ -18,7 +18,7 @@
             <a class="URL" href="/paginas menus/Camisetas.html"><h2>Camisetas</h2></a>
         </div>
         <div class="menu">
-            <a class="URL" href="/paginas menus/Sudaderas.Html"><h2>Sudaderas</h2></a>
+            <h2>Sudaderas</h2>
         </div>
         <div class="menu">
             <a class="URL" href="/paginas menus/contacto.html"><h3>Contacto</h3></a>
