--- a/paginas menus/Zapatillas.html
+++ b/paginas menus/Zapatillas.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda</title>
-    <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="/css.css">
 </head>
 <body>
     <div class="menus">
        <div class="menu">
-           <h1>Tienda</h1>       
+           <a class="URL" href="/html.html"><h1>Tienda</h1></a>
         </div>
         <div class="menu">
-            <a class="URL" href="/paginas menus/Zapatillas.html"><h2>Zapatillas</h2></a>
+         <h2>Zapatillas</h2>
         </div>
         <div class="menu">
             <a class="URL" href="/paginas menus/Camisetas.html"><h2>Camisetas</h2></a>
@@ -28,13 +28,12 @@
         </div>
     </div>
     <div class="productos">
-
         <div class="producto">
-            <img src="https://th.bing.com/th/id/OIG.bafkgCUesNpX5Le0BGlc?w=1024&h=1024&rs=1&pid=ImgDetMain" alt="" height="250px" width="250px">
-            <h4>Sudadera tejana</h4>
-            <h5>40€</h5>
+            <img src="https://th.bing.com/th/id/OIG.TxoH9XWxjnjq_mQfTrNM?pid=ImgGn" alt="" height="250px" width="250px">
+            <h4>Zapatillas</h4>
+            <h5>70€</h5>
             <button>Añadir al carrito</button>
-            <!-- sudaderas -->
+            <!-- zapatillas -->
         </div>
         <div class="producto">
             <img src="https://th.bing.com/th/id/OIG.TxoH9XWxjnjq_mQfTrNM?pid=ImgGn" alt="" height="250px" width="250px">
@@ -44,12 +43,27 @@
             <!-- zapatillas -->
         </div>
         <div class="producto">
-            <img src="https://th.bing.com/th/id/OIG.BB2SzUlCkAzjr695wMQc?pid=ImgGn" alt="" height="250px" width="250px">
-            <h4>Camiseta</h4>
-            <h5>15€</h5>
+            <img src="https://th.bing.com/th/id/OIG.TxoH9XWxjnjq_mQfTrNM?pid=ImgGn" alt="" height="250px" width="250px">
+            <h4>Zapatillas</h4>
+            <h5>70€</h5>
             <button>Añadir al carrito</button>
-            <!-- camiseta -->
+            <!-- zapatillas -->
         </div>
+        <div class="producto">
+            <img src="https://th.bing.com/th/id/OIG.TxoH9XWxjnjq_mQfTrNM?pid=ImgGn" alt="" height="250px" width="250px">
+            <h4>Zapatillas</h4>
+            <h5>70€</h5>
+            <button>Añadir al carrito</button>
+            <!-- zapatillas -->
+        </div>
+        <div class="producto">
+            <img src="https://th.bing.com/th/id/OIG.TxoH9XWxjnjq_mQfTrNM?pid=ImgGn" alt="" height="250px" width="250px">
+            <h4>Zapatillas</h4>
+            <h5>70€</h5>
+            <button>Añadir al carrito</button>
+            <!-- zapatillas -->
+        </div>
+       
     </div>
 </body>
 </html>
